--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,10 @@ function sendJSONXMLHTTPRequest(url, objects, callback) {
                 if (xhr.status==200) {
                     //XXX: parse some JSON from the request!
                     //XXX: Pass the data to the callback!
+                    if (callback != null) {
+                        callback(JSON.parse(xhr.responseText));
+                    }
+                    
                 }
             } 
             catch(e) {
@@ -50,10 +54,15 @@ function sendJSONXMLHTTPRequest(url, objects, callback) {
     //XXX: POST to a URL
     //XXX: set the mimetype and the accept headers!
     // Remember to use application/json !
+    xhr.open("POST", url);
+    xhr.setRequestHeader("Content-Type", "application/json");
+    xhr.setRequestHeader("Accept", "application/json")
+    xhr.send(JSON.stringify(objects));
 }
 
 
 world = {};
+
 
 //XXX: TODO Make this prettier!
 function drawCircle(context,entity) {
@@ -63,10 +72,15 @@ function drawCircle(context,entity) {
         var x = entity["x"];
         var y = entity["y"];
         //moveTo(x,y);
-        fillStyle = entity["colour"];
-        strokeStyle = fillStyle;
-        arc(x, y, (entity["radius"])?entity["radius"]:50, 0, 2.0 * Math.PI, false);  
-        stroke();                                
+        var radius = (entity["radius"])?entity["radius"]:50;
+        var gradient = createRadialGradient(x, y, radius*0.7, x, y, radius*1.5);
+        gradient.addColorStop(0, "rgba(0, 0, 0, 0)");
+        gradient.addColorStop(0.25, entity["colour"]);
+        gradient.addColorStop(1, "rgba(0, 0, 0, 0)");
+
+        fillStyle = gradient;
+        arc(x, y, radius, 0, 2.0 * Math.PI, false);                              
+        fill()
     }
 }
 
@@ -138,7 +152,7 @@ function addEntity(entity, data) {
     world[entity] = data;
     drawNextFrame(); // (but should we?)
     //XXX: Send a XHTML Request that updates the entity you just  modified!
-
+    sendJSONXMLHTTPRequest("/entity/"+entity, data, null);
 }
 
 var counter = 0;
@@ -244,24 +258,37 @@ mouse = (function() {
     return self;
 })();
 
+// got the function from https://stackoverflow.com/a/1484514/13544994
+function getRandomColor() {
+    var letters = '0123456789ABCDEF';
+    var color = '#';
+    for (var i = 0; i < 6; i++) {
+        color += letters[Math.floor(Math.random() * 16)];
+    }
+    return color;
+}
 // Add the application specific mouse listeners!
 //XXX: TODO Make these prettier!
 mouse.mousedowners.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'blue'});
+    addEntityWithoutName({'x':x,'y':y,'colour':'#2c47e6'});
 });
 
 mouse.mouseuppers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'red'});
+    addEntityWithoutName({'x':x,'y':y,'colour':'#cf3732'});
 });
 
 mouse.mousedraggers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'green',
+    addEntityWithoutName({'x':x,'y':y,'colour':getRandomColor(),
                           'radius':10});
 });
 
 
 function update() {
     //XXX: TODO Get the world from the webservice using a XMLHTTPRequest
+    sendJSONXMLHTTPRequest("/world", null, function(newWorld) {
+        world = newWorld;
+        drawNextFrame();
+    });
     drawFrame();
 }
 
