--- a/static/index.html
+++ b/static/index.html
@@ -80,7 +80,7 @@ function drawCircle(context,entity) {
 
         fillStyle = gradient;
         arc(x, y, radius, 0, 2.0 * Math.PI, false);                              
-        fill()
+        fill();
     }
 }
 
